# memetic-algorithm

./: CMakeLists.txt  _parametros.txt
_logs/: results.txt
src/: Airport.cpp  Airport.h  Genetic.cpp  Genetic.h  Memetic.cpp  Memetic.h  TabuSearch.cpp  TabuSearch.h  Utils.cpp  Utils.h  main.cpp
